--- a/themes/matery-master/_config.yml
+++ b/themes/matery-master/_config.yml
@@ -163,21 +163,21 @@ profile:
 myProjects:
   enable: true
   data:
-    hexo-theme-matery:
+    Android Learning:
       icon: fa-meetup
       iconBackground: 'linear-gradient(to bottom right, #66BB6A 0%, #81C784 100%)'
-      url: http://github.com/blinkfox/hexo-theme-matery
-      desc: This is a Hexo blog theme with 'Material Design' and responsive design.
-    zealt:
+      url: https://github.com/baiyazi/AndroidDownloadUtils
+      desc: Android单/多线程文件断点下载的简单封装。
+    Influence Maximization Problem:
         icon: fa-database
         iconBackground: 'linear-gradient(to bottom right, #F06292 0%, #EF5350 100%)'
-        url: https://github.com/blinkfox/zealot
-        desc: 一个轻量级的SQL和参数动态生成工具库
-    typora-vue-theme:
+        url: https://github.com/baiyazi/NineIM
+        desc: 关于IM问题，发表的论文的代码。
+    Android learning materials:
         icon: fa-file-text-o
         iconBackground: 'linear-gradient(to bottom right, #29B6F6 0%, #1E88E5 100%)'
-        url: https://github.com/blinkfox/typora-vue-theme
-        desc: This is a typora theme inspired by Vue document style.
+        url: https://github.com/baiyazi/android-open-project
+        desc: 找到的很好的Android相关的资料整理汇总。
 
 # config my skills informations in about page.
 # If you don't want to display this `My Skills` content, you can deactivate or delete this configuration.
